--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p class="text-center pt-3 ">
                   03 Nisan Çarşamba<br>
                   20:30 <br>Çayırova Şekerpınar Stadyumu <br>
-                  <span class="text-success ">Sonuç: - : -</span>
+                  <span class="text-success ">Sonuç: 4 : 0</span>
                 </p>
               </div>
               <div class="team-info p-2">
@@ -195,7 +195,7 @@
                 <p class="text-center pt-3 ">
                   03 Nisan Çarşamba<br>
                   20:30 <br>Darıca Nenehatun Stadı <br>
-                  <span class="text-success ">Sonuç: - : -</span>
+                  <span class="text-success ">Sonuç: 3 : 2</span>
                 </p>
               </div>
               <div class="team-info p-2">
