--- a/index.html
+++ b/index.html
@@ -153,30 +153,12 @@
               <div class="info">
                 <p class="text-center pt-3 ">
                   03 Nisan Çarşamba<br>
-                  20:30 <br>Darıca Nenehatun Stadı <br>
-                  <span class="text-success ">Sonuç: 4:1 Galip</span>
-                </p>
-              </div>
-              <div class="team-info p-2">
-                <img src="img/Rakip/46477069_2250195835013766_4247196771358343168_n.gif.crdownload" class="img-fluid"
-                  width="100" alt="Ban Sport">
-
-              </div>
-            </div>
-
-            
-            <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
-
-              <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
-
-              </div>
-              <div class="info">
-                <p class="text-center pt-3 ">
-                  03 Nisan Çarşamba<br>
                   20:30 <br>Çayırova Şekerpınar Stadyumu <br>
                   <span class="text-success ">Sonuç: 4 : 0</span>
                 </p>
+                <span> Ebubekir GÜNER <img src="img/ball.png" alt="">  </span> <br/>
+                <span> Oğuzhan Demir <img src="img/ball.png" alt=""> </span> <br/>
+                <span> Kemal Furkan İPEK <img src="img/ball.png" alt=""><img src="img/ball.png" alt=""></span> <br/>
               </div>
               <div class="team-info p-2">
                 <img src="img/Rakip/47185790_2269902833043066_734218775146004480_n.gif.crdownload" class="img-fluid"
@@ -197,6 +179,11 @@
                   20:30 <br>Darıca Nenehatun Stadı <br>
                   <span class="text-success ">Sonuç: 3 : 2</span>
                 </p>
+                <span> Şükrü TEKİN <img src="img/ball.png" alt="">  </span> <br/>
+                <span> Aykut KARACA <img src="img/ball.png" alt=""> </span> <br/>
+                <span> Kemal Furkan İPEK <img src="img/ball.png" alt=""></span> <br/>
+
+                </span>
               </div>
               <div class="team-info p-2">
                 <img src="img/Rakip/67807093_2690889977611014_1061352844805799936_n.gif.crdownload" class="img-fluid"
