--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2 " style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+               <a href="matchday-details.html"><img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu"></a> 
 
               </div>
               <div class="info">
@@ -156,6 +156,10 @@
                   20:30 <br>Darıca Nenehatun Stadı <br>
                   <span class="text-success  ">Sonuç: 4:1 Galip</span>
                 </p>
+                <span> Ebubekir GÜNER <img src="img/ball.png" alt="">  </span> <br/>
+                <span> Mustafa UÇAN <img src="img/ball.png" alt=""> </span> <br/>
+
+               
               </div>
               <div class="team-info p-2">
                 <img src="img/Rakip/46477069_2250195835013766_4247196771358343168_n.gif.crdownload" class="img-fluid"
@@ -168,7 +172,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu">
 
               </div>
               <div class="info">
@@ -191,7 +195,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu">
 
               </div>
               <div class="info">
@@ -213,10 +217,10 @@
               </div>
             </div>
 
-            <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
+            <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2 " style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu0">
 
               </div>
               <div class="info">
@@ -236,7 +240,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu0">
 
               </div>
               <div class="info">
@@ -256,7 +260,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu0">
 
               </div>
               <div class="info">
@@ -276,7 +280,7 @@
             <div class="col-xl-4 d-flex align-items-center  bg-white py-4 m-2" style="width: 25rem;">
 
               <div class="team-info p-2">
-                <img src="img/diy.png" class="img-fluid" width="100" alt="Fenerbahçe">
+                <img src="img/diy.png" class="img-fluid" width="100" alt="Darıca İdamnyurdu0">
 
               </div>
               <div class="info">
@@ -341,7 +345,7 @@
 
 
 
-  <script type='text/javascript'></script>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
