--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
 
-  <header class="">
+  <header class="container-fluid">
     <div class="">
       <div class="row">
         <div class="col-xl-7">
