--- a/index.html
+++ b/index.html
@@ -316,21 +316,20 @@
           <div class="col-xl-8">
             <h2>Hakkımızda </h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque nobis voluptate soluta nisi? Ad dolor
-              cumque sunt fugit, natus, possimus asperiores ullam sed incidunt, molestiae praesentium. Repellat, enim
-              reprehenderit ducimus nostrum quia quis modi, eligendi quae architecto, optio aliquam? Quidem, non
-              perspiciatis sunt fugit ullam dolore odio accusamus eaque temporibus nemo! Cupiditate quas aliquid
-              blanditiis optio, alias fugiat. Perferendis, id. Nulla magnam iusto doloremque dolores minima, repellat
-              harum et aliquid unde, aperiam ut libero possimus ullam. Pariatur, incidunt rerum? Tenetur, ipsum
-              corrupti? Cumque sint rerum magnam ipsum odio non eaque aperiam nesciunt nostrum quod error ipsa velit
-              consequatur itaque sit aliquam impedit, provident totam autem laudantium. Asperiores officia soluta
-              inventore esse. Ea, voluptatum repudiandae! Ipsum modi, similique, ullam inventore cumque quas a dolorem,
-              id eos consequuntur architecto laboriosam vero fugit ab voluptates fugiat aliquam. Soluta eveniet deleniti
-              excepturi, sint veritatis, inventore veniam nesciunt alias officia sed corporis error est laudantium
-              incidunt reiciendis fuga qui nihil delectus deserunt earum amet. Voluptatem temporibus illum fugiat
-              tenetur non magni perspiciatis, provident corrupti veritatis, ipsum qui reprehenderit pariatur beatae
-              atque nesciunt quibusdam eligendi aperiam doloremque. Tempore numquam voluptatem, dolorem saepe, nesciunt
-              architecto debitis facere beatae, dignissimos ipsam in cumque eligendi voluptas. Ipsum, quam. Nam?</p>
+            <p>Darıca İdmanyurdu, 2023 yılında kurulmuş olan genç bir spor kulübüdür. Henüz kısa bir süre içinde kuruluşundan bu yana, hızla büyüyerek ve gelişerek, spor dünyasında önemli bir yer edinmeye başlamıştır. Kulübün genç yaşına rağmen gösterdiği hızlı ilerleme, gelecekte ne kadar başarılı olabileceğinin bir işareti olarak görülmektedir.</p>
+            <p>
+              Darıca İdmanyurdu'nun kuruluşundan bu yana, hedefleri arasında yerel liglerden başlayarak ulusal arenada kendine sağlam bir yer edinmek bulunmaktadır. Genç yeteneklerin keşfedilmesi ve geliştirilmesi için yapılan yatırımlarla, kulübün uzun vadeli başarılarına temel oluşturulmaktadır. Aynı zamanda, Darıca İdmanyurdu'nun sadece futbol alanında değil, diğer spor dallarında da faaliyet göstererek geniş bir spor yelpazesi sunma hedefi bulunmaktadır.
+            </p>
+            <p>
+              Kuruluşundan bu yana, Darıca İdmanyurdu'nun genç ve dinamik kadrosu, bir araya gelerek kulübü daha da güçlendirmek için yoğun bir çalışma içerisindedir. Takımın antrenörlerinden yönetim kadrosuna kadar herkes, kulübün ortak hedefleri doğrultusunda birlikte çalışmakta ve başarıya ulaşmak için çaba göstermektedir.
+            </p>
+            <p>
+              Darıca İdmanyurdu, sadece spor alanında değil, aynı zamanda topluma katkı sağlamak adına da çeşitli sosyal sorumluluk projelerine imza atmaktadır. Gençleri sporla buluşturmak, onları kötü alışkanlıklardan uzak tutmak ve sağlıklı bir yaşam tarzını teşvik etmek, kulübün önemli amaçları arasında yer almaktadır.
+            </p>
+            <p>
+              Sonuç olarak, Darıca İdmanyurdu genç yaşına rağmen hızlı bir şekilde büyüyerek, spor dünyasında kendine sağlam bir yer edinmeye başlamıştır. Kuruluşundan bu yana gösterdiği başarılar ve topluma katkılarıyla gelecekte de önemli bir rol oynaması beklenmektedir.
+            </p>
+
           </div>
           <div class="col-xl-4">
             <img src="img/diy.png" class="img-fluid " alt="">
