--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
             </p>
 
           </div>
-          <div class="col-xl-4">
-            <img src="img/diy.png" class="img-fluid " alt="">
+          <div class="col-xl-4 align-self-center">
+            <img src="img/diy.png" class="img-fluid p-3" alt="">
           </div>
         </div>
       </div>
